Add API client and development server (#5)
